Fix sidebar position on mobile devices.

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -11,7 +11,7 @@
     z-index: 2000;
 
     &.up {
-        top: calc(100vh - (var(--vh)));
+        top: 0;
 
         .waypoints {
             flex-grow: 1;
